@@ -1,5 +1,10 @@
 2007-05-28 Braden McDaniel  <braden@endoframe.com>
 
+	* src/libopenvrml/openvrml/browser.cpp: Replaced "interface" with
+	"interface_" for Windows-friendliness.
+
+2007-05-28 Braden McDaniel  <braden@endoframe.com>
+
 	* ide-projects/Windows/VisualC9_0/OpenVRML/ltdl/ltdl.vcproj: Refer
 	to the local libltdl copy.
 
